// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VariablesOps createVariable() 1: Create variable12 (pre-encoded) 1`] = `
{
  "_id": "esv-frodo-test-variable-12",
  "description": "description12",
  "expressionType": "string",
  "lastChangeDate": "2024-07-05T15:22:25.72447206Z",
  "lastChangedBy": "Frodo-SA-1701393386423",
  "loaded": false,
  "valueBase64": "dmFsdWUxMg==",
}
`;

exports[`VariablesOps createVariable() 2: Create variable13 (not encoded) 1`] = `
{
  "_id": "esv-frodo-test-variable-13",
  "description": "description13",
  "expressionType": "string",
  "lastChangeDate": "2024-07-05T15:22:26.648538111Z",
  "lastChangedBy": "Frodo-SA-1701393386423",
  "loaded": false,
  "valueBase64": "dmFsdWUxMw==",
}
`;

exports[`VariablesOps deleteVariable() 1: Delete variable19 1`] = `
{
  "_id": "esv-frodo-test-variable-19",
  "description": "description19",
  "expressionType": "string",
  "lastChangeDate": "2024-07-05T15:22:14.649883Z",
  "lastChangedBy": "Frodo-SA-1701393386423",
  "loaded": false,
  "valueBase64": "dmFsdWUxOQ==",
}
`;

exports[`VariablesOps deleteVariable() 2: Delete variable3 (non-existent) 1`] = `
"Error deleting variable esv-frodo-test-variable-3
  HTTP client error
    URL: https://openam-frodo-dev.forgeblocks.com/environment/variables/esv-frodo-test-variable-3
    Status: 404
    Code: ERR_BAD_REQUEST
    Message: The variable does not exist"
`;

exports[`VariablesOps exportVariable() 1: Export variable1 1`] = `
{
  "meta": Any<Object>,
  "variable": {
    "esv-frodo-test-variable-1": {
      "_id": "esv-frodo-test-variable-1",
      "description": "description1",
      "expressionType": "string",
      "lastChangeDate": "2024-07-05T15:22:07.553597Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": false,
      "value": "value1",
    },
  },
}
`;

exports[`VariablesOps exportVariable() 2: Export variable2 without decoding 1`] = `
{
  "meta": Any<Object>,
  "variable": {
    "esv-frodo-test-variable-2": {
      "_id": "esv-frodo-test-variable-2",
      "description": "description2",
      "expressionType": "int",
      "lastChangeDate": "2024-07-05T15:22:08.687587Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": false,
      "valueBase64": "NDI=",
    },
  },
}
`;

exports[`VariablesOps exportVariable() 3: Export variable3 (non-existent) 1`] = `
"Error exporting variable esv-frodo-test-variable-3
  HTTP client error
    URL: https://openam-frodo-dev.forgeblocks.com/environment/variables/esv-frodo-test-variable-3
    Status: 404
    Code: ERR_BAD_REQUEST
    Message: The variable does not exist"
`;

exports[`VariablesOps exportVariables() 1: Export all variables 1`] = `
{
  "meta": Any<Object>,
  "variable": {
    "esv-frodo-test-variable-1": {
      "_id": "esv-frodo-test-variable-1",
      "description": "description1",
      "expressionType": "string",
      "lastChangeDate": "2024-07-05T15:22:07.553597Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": false,
      "value": "value1",
    },
    "esv-frodo-test-variable-14": {
      "_id": "esv-frodo-test-variable-14",
      "description": "description14",
      "expressionType": "string",
      "lastChangeDate": "2024-07-05T15:22:11.105605Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": false,
      "value": "value14",
    },
    "esv-frodo-test-variable-15": {
      "_id": "esv-frodo-test-variable-15",
      "description": "description15",
      "expressionType": "string",
      "lastChangeDate": "2024-07-05T15:22:12.263573Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": false,
      "value": "value15",
    },
    "esv-frodo-test-variable-18": {
      "_id": "esv-frodo-test-variable-18",
      "description": "description18",
      "expressionType": "string",
      "lastChangeDate": "2024-07-05T15:22:13.493195Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": false,
      "value": "value18",
    },
    "esv-frodo-test-variable-19": {
      "_id": "esv-frodo-test-variable-19",
      "description": "description19",
      "expressionType": "string",
      "lastChangeDate": "2024-07-05T15:22:14.649883Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": false,
      "value": "value19",
    },
    "esv-frodo-test-variable-2": {
      "_id": "esv-frodo-test-variable-2",
      "description": "description2",
      "expressionType": "int",
      "lastChangeDate": "2024-07-05T15:22:08.687587Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": false,
      "value": "42",
    },
    "esv-test-variable-light": {
      "_id": "esv-test-variable-light",
      "description": "Test variable containing the speed of light in meters per second (as an int).",
      "expressionType": "int",
      "lastChangeDate": "2023-12-14T15:34:13.446903Z",
      "lastChangedBy": "phales@trivir.com",
      "loaded": true,
      "value": "299792458",
    },
  },
}
`;

exports[`VariablesOps exportVariables() 2: Export all variables without decoding 1`] = `
{
  "meta": Any<Object>,
  "variable": {
    "esv-frodo-test-variable-1": {
      "_id": "esv-frodo-test-variable-1",
      "description": "description1",
      "expressionType": "string",
      "lastChangeDate": "2024-07-05T15:22:07.553597Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": false,
      "valueBase64": "dmFsdWUx",
    },
    "esv-frodo-test-variable-14": {
      "_id": "esv-frodo-test-variable-14",
      "description": "description14",
      "expressionType": "string",
      "lastChangeDate": "2024-07-05T15:22:11.105605Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": false,
      "valueBase64": "dmFsdWUxNA==",
    },
    "esv-frodo-test-variable-15": {
      "_id": "esv-frodo-test-variable-15",
      "description": "description15",
      "expressionType": "string",
      "lastChangeDate": "2024-07-05T15:22:12.263573Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": false,
      "valueBase64": "dmFsdWUxNQ==",
    },
    "esv-frodo-test-variable-18": {
      "_id": "esv-frodo-test-variable-18",
      "description": "description18",
      "expressionType": "string",
      "lastChangeDate": "2024-07-05T15:22:13.493195Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": false,
      "valueBase64": "dmFsdWUxOA==",
    },
    "esv-frodo-test-variable-19": {
      "_id": "esv-frodo-test-variable-19",
      "description": "description19",
      "expressionType": "string",
      "lastChangeDate": "2024-07-05T15:22:14.649883Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": false,
      "valueBase64": "dmFsdWUxOQ==",
    },
    "esv-frodo-test-variable-2": {
      "_id": "esv-frodo-test-variable-2",
      "description": "description2",
      "expressionType": "int",
      "lastChangeDate": "2024-07-05T15:22:08.687587Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": false,
      "valueBase64": "NDI=",
    },
    "esv-test-variable-light": {
      "_id": "esv-test-variable-light",
      "description": "Test variable containing the speed of light in meters per second (as an int).",
      "expressionType": "int",
      "lastChangeDate": "2023-12-14T15:34:13.446903Z",
      "lastChangedBy": "phales@trivir.com",
      "loaded": true,
      "valueBase64": "Mjk5NzkyNDU4",
    },
  },
}
`;

exports[`VariablesOps importVariable() 1: Import variable4 1`] = `
{
  "_id": "esv-frodo-test-variable-4",
  "description": "description4",
  "expressionType": "string",
  "lastChangeDate": "2024-07-05T15:22:18.916270254Z",
  "lastChangedBy": "Frodo-SA-1701393386423",
  "loaded": false,
  "valueBase64": "dmFsdWU0",
}
`;

exports[`VariablesOps importVariable() 2: Import variable5 (decoded) 1`] = `
{
  "_id": "esv-frodo-test-variable-5",
  "description": "description5",
  "expressionType": "string",
  "lastChangeDate": "2024-07-05T15:22:19.724932184Z",
  "lastChangedBy": "Frodo-SA-1701393386423",
  "loaded": false,
  "valueBase64": "dmFsdWU1",
}
`;

exports[`VariablesOps importVariable() 3: Import first variable6 1`] = `
{
  "_id": "esv-frodo-test-variable-6",
  "description": "description6",
  "expressionType": "string",
  "lastChangeDate": "2024-07-05T15:22:20.545619489Z",
  "lastChangedBy": "Frodo-SA-1701393386423",
  "loaded": false,
  "valueBase64": "dmFsdWU2",
}
`;

exports[`VariablesOps importVariable() 4: Import first variable7 (decoded) 1`] = `
{
  "_id": "esv-frodo-test-variable-7",
  "description": "description7",
  "expressionType": "string",
  "lastChangeDate": "2024-07-05T15:22:21.316837805Z",
  "lastChangedBy": "Frodo-SA-1701393386423",
  "loaded": false,
  "valueBase64": "dmFsdWU3",
}
`;

exports[`VariablesOps importVariables() 1: Import all variables 1`] = `
[
  {
    "_id": "esv-frodo-test-variable-8",
    "description": "description8",
    "expressionType": "string",
    "lastChangeDate": "2024-07-05T15:22:22.135191587Z",
    "lastChangedBy": "Frodo-SA-1701393386423",
    "loaded": false,
    "valueBase64": "dmFsdWU4",
  },
  {
    "_id": "esv-frodo-test-variable-9",
    "description": "description9",
    "expressionType": "string",
    "lastChangeDate": "2024-07-05T15:22:22.967029477Z",
    "lastChangedBy": "Frodo-SA-1701393386423",
    "loaded": false,
    "valueBase64": "dmFsdWU5",
  },
]
`;

exports[`VariablesOps importVariables() 2: Import all variables (decoded) 1`] = `
[
  {
    "_id": "esv-frodo-test-variable-10",
    "description": "description10",
    "expressionType": "string",
    "lastChangeDate": "2024-07-05T15:22:23.913651567Z",
    "lastChangedBy": "Frodo-SA-1701393386423",
    "loaded": false,
    "valueBase64": "dmFsdWUxMA==",
  },
  {
    "_id": "esv-frodo-test-variable-11",
    "description": "description11",
    "expressionType": "string",
    "lastChangeDate": "2024-07-05T15:22:24.710588425Z",
    "lastChangedBy": "Frodo-SA-1701393386423",
    "loaded": false,
    "valueBase64": "dmFsdWUxMQ==",
  },
]
`;

exports[`VariablesOps readVariable() 1: Read variable1 1`] = `
{
  "_id": "esv-frodo-test-variable-1",
  "description": "description1",
  "expressionType": "string",
  "lastChangeDate": "2024-07-05T15:22:07.553597Z",
  "lastChangedBy": "Frodo-SA-1701393386423",
  "loaded": false,
  "value": "value1",
}
`;

exports[`VariablesOps readVariable() 2: Read variable2 without decoding 1`] = `
{
  "_id": "esv-frodo-test-variable-2",
  "description": "description2",
  "expressionType": "int",
  "lastChangeDate": "2024-07-05T15:22:08.687587Z",
  "lastChangedBy": "Frodo-SA-1701393386423",
  "loaded": false,
  "valueBase64": "NDI=",
}
`;

exports[`VariablesOps readVariable() 3: Read variable3 (non-existent) 1`] = `
"Error reading variable esv-frodo-test-variable-3
  HTTP client error
    URL: https://openam-frodo-dev.forgeblocks.com/environment/variables/esv-frodo-test-variable-3
    Status: 404
    Code: ERR_BAD_REQUEST
    Message: The variable does not exist"
`;

exports[`VariablesOps readVariables() 1: Read all variables 1`] = `
[
  {
    "_id": "esv-frodo-test-variable-1",
    "description": "description1",
    "expressionType": "string",
    "lastChangeDate": "2024-07-05T15:22:07.553597Z",
    "lastChangedBy": "Frodo-SA-1701393386423",
    "loaded": false,
    "value": "value1",
  },
  {
    "_id": "esv-frodo-test-variable-14",
    "description": "description14",
    "expressionType": "string",
    "lastChangeDate": "2024-07-05T15:22:11.105605Z",
    "lastChangedBy": "Frodo-SA-1701393386423",
    "loaded": false,
    "value": "value14",
  },
  {
    "_id": "esv-frodo-test-variable-15",
    "description": "description15",
    "expressionType": "string",
    "lastChangeDate": "2024-07-05T15:22:12.263573Z",
    "lastChangedBy": "Frodo-SA-1701393386423",
    "loaded": false,
    "value": "value15",
  },
  {
    "_id": "esv-frodo-test-variable-18",
    "description": "description18",
    "expressionType": "string",
    "lastChangeDate": "2024-07-05T15:22:13.493195Z",
    "lastChangedBy": "Frodo-SA-1701393386423",
    "loaded": false,
    "value": "value18",
  },
  {
    "_id": "esv-frodo-test-variable-19",
    "description": "description19",
    "expressionType": "string",
    "lastChangeDate": "2024-07-05T15:22:14.649883Z",
    "lastChangedBy": "Frodo-SA-1701393386423",
    "loaded": false,
    "value": "value19",
  },
  {
    "_id": "esv-frodo-test-variable-2",
    "description": "description2",
    "expressionType": "int",
    "lastChangeDate": "2024-07-05T15:22:08.687587Z",
    "lastChangedBy": "Frodo-SA-1701393386423",
    "loaded": false,
    "value": "42",
  },
  {
    "_id": "esv-test-variable-light",
    "description": "Test variable containing the speed of light in meters per second (as an int).",
    "expressionType": "int",
    "lastChangeDate": "2023-12-14T15:34:13.446903Z",
    "lastChangedBy": "phales@trivir.com",
    "loaded": true,
    "value": "299792458",
  },
]
`;

exports[`VariablesOps readVariables() 2: Read all variables without decoding 1`] = `
[
  {
    "_id": "esv-frodo-test-variable-1",
    "description": "description1",
    "expressionType": "string",
    "lastChangeDate": "2024-07-05T15:22:07.553597Z",
    "lastChangedBy": "Frodo-SA-1701393386423",
    "loaded": false,
    "valueBase64": "dmFsdWUx",
  },
  {
    "_id": "esv-frodo-test-variable-14",
    "description": "description14",
    "expressionType": "string",
    "lastChangeDate": "2024-07-05T15:22:11.105605Z",
    "lastChangedBy": "Frodo-SA-1701393386423",
    "loaded": false,
    "valueBase64": "dmFsdWUxNA==",
  },
  {
    "_id": "esv-frodo-test-variable-15",
    "description": "description15",
    "expressionType": "string",
    "lastChangeDate": "2024-07-05T15:22:12.263573Z",
    "lastChangedBy": "Frodo-SA-1701393386423",
    "loaded": false,
    "valueBase64": "dmFsdWUxNQ==",
  },
  {
    "_id": "esv-frodo-test-variable-18",
    "description": "description18",
    "expressionType": "string",
    "lastChangeDate": "2024-07-05T15:22:13.493195Z",
    "lastChangedBy": "Frodo-SA-1701393386423",
    "loaded": false,
    "valueBase64": "dmFsdWUxOA==",
  },
  {
    "_id": "esv-frodo-test-variable-19",
    "description": "description19",
    "expressionType": "string",
    "lastChangeDate": "2024-07-05T15:22:14.649883Z",
    "lastChangedBy": "Frodo-SA-1701393386423",
    "loaded": false,
    "valueBase64": "dmFsdWUxOQ==",
  },
  {
    "_id": "esv-frodo-test-variable-2",
    "description": "description2",
    "expressionType": "int",
    "lastChangeDate": "2024-07-05T15:22:08.687587Z",
    "lastChangedBy": "Frodo-SA-1701393386423",
    "loaded": false,
    "valueBase64": "NDI=",
  },
  {
    "_id": "esv-test-variable-light",
    "description": "Test variable containing the speed of light in meters per second (as an int).",
    "expressionType": "int",
    "lastChangeDate": "2023-12-14T15:34:13.446903Z",
    "lastChangedBy": "phales@trivir.com",
    "loaded": true,
    "valueBase64": "Mjk5NzkyNDU4",
  },
]
`;

exports[`VariablesOps updateVariable() 1: Update existing variable14 (pre-encoded) 1`] = `
{
  "_id": "esv-frodo-test-variable-14",
  "description": "description14",
  "expressionType": "string",
  "lastChangeDate": "2024-07-05T15:22:11.105605Z",
  "lastChangedBy": "Frodo-SA-1701393386423",
  "loaded": false,
  "valueBase64": "dmFsdWUxNA==",
}
`;

exports[`VariablesOps updateVariable() 2: Update existing variable15 (not encoded) 1`] = `
{
  "_id": "esv-frodo-test-variable-15",
  "description": "description15",
  "expressionType": "string",
  "lastChangeDate": "2024-07-05T15:22:12.263573Z",
  "lastChangedBy": "Frodo-SA-1701393386423",
  "loaded": false,
  "valueBase64": "dmFsdWUxNQ==",
}
`;

exports[`VariablesOps updateVariable() 3: Update/create non-existing variable16 (pre-encoded) 1`] = `
{
  "_id": "esv-frodo-test-variable-16",
  "description": "description16",
  "expressionType": "string",
  "lastChangeDate": "2024-07-05T15:22:28.513693686Z",
  "lastChangedBy": "Frodo-SA-1701393386423",
  "loaded": false,
  "valueBase64": "dmFsdWUxNg==",
}
`;

exports[`VariablesOps updateVariable() 4: Update/create non-existing variable17 (not encoded) 1`] = `
{
  "_id": "esv-frodo-test-variable-17",
  "description": "description17",
  "expressionType": "string",
  "lastChangeDate": "2024-07-05T15:22:29.266116989Z",
  "lastChangedBy": "Frodo-SA-1701393386423",
  "loaded": false,
  "valueBase64": "dmFsdWUxNw==",
}
`;

exports[`VariablesOps updateVariableDescription() 1: Update variable18 description 1`] = `""`;
